--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -32,7 +32,7 @@
                         <span>{{ username }}</span>
                         <img title="загрузить"  class="user" src="/static/mainapp/images/user.svg" alt="user">
                         <ul class="menu-drop" v-if="menuShow">
-                            <li><a href="profile/">Настройки</a></li>
+                            <li><a href="profile/">Профиль</a></li>
                             <li><a href="auth/logout/">Выйти</a></li>
                         </ul>
                     </div>
