--- a/mainapp/templates/mainapp/loader-music.html
+++ b/mainapp/templates/mainapp/loader-music.html
@@ -11,7 +11,7 @@
         <form method="POST">
             <div class="track-img-loader-conteiner" >
                 <label>Обложка издания:</label>
-                <img :class="imgStyle"  @click="imit" src="/static/mainapp/images/camera.png" alt="обложка">
+                <img :class="imgStyle"  @click="imit" src="/static/mainapp/images/camera.svg" alt="обложка">
             </div>
             <div class="track-name-loader-conteiner">
                 <label for="track-name-loader">Название издания*:</label>
