--- a/mainapp/static/mainapp/css/profile.css
+++ b/mainapp/static/mainapp/css/profile.css
@@ -35,6 +35,7 @@ html, body
     display: block;
     box-sizing: border-box;
     margin-bottom: 3%;
+    box-shadow: 0 5px 12px rgba(0,0,0,0.15), 0 3px 3px rgba(0,0,0,0.12);
 }
 /*то что справа*/
 .rightColumn
@@ -48,10 +49,6 @@ html, body
 }
 .ProfileDescription
 {
-    box-sizing: border-box;
-    padding: 1%;
-    margin-bottom: 3%;
-    background-color: #fff;
     font-size: 130%;
 }
 .ProfileDescription p
@@ -63,12 +60,104 @@ html, body
 }
 .favoriteAlbum
 {
-    padding: 1%;
-    background-color: #fff;
-    display: block;
-    box-sizing: border-box;
     font-size: 130%;
 }
+.MyAlbums
+{
+    font-size: 110%;
+}
+.MyAlbums-conteiner
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex-basis: 100%;
+}
+.MyAlbums-conteiner:not(:nth-child(2)) .MyAlbum
+{
+    margin-top: 1.5%; 
+}
+.MyAlbum
+{
+    min-height: 176.78px;
+    height: auto;
+    /*display: flex;*/
+    flex-basis: 25%;
+    padding: 1%;
+    background-color: rgba(217, 217, 217,0.3);
+}
+.Albom-Description, .MyAlbum-lable, .MyAlbum-music
+{
+    float: left;
+}
+.MyAlbum-lable
+{
+    margin: auto;
+    height: 30%;
+    width: 30%;
+    margin-right: 2%;
+}
+.Albom-Description
+{
+    height: 20%;
+    float: left;
+    width: 66%;
+    margin-right: 1.7%;
+    display: flex;
+    flex-direction: column;
+}
+.more
+{
+    cursor: pointer;
+    color: cornflowerblue;
+    font-size: 70%;
+}
+.Albom-Description label
+{
+    font-size: 70%;
+}
+.MyAlbum-music
+{
+    width: 66%;
+    display: block;
+}
+.Mymusic-conteiner
+{
+    max-height: 164.95px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 8px;
+    width: 95%;
+    height: 83%;
+    margin: 1.5% 1.5%;
+    background-color: rgba(255, 255, 255,0.5);
+    box-shadow: 0 0 23px rgba(0, 0, 0, .1) inset; 
+}
+.MyMusic
+{
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding: 3px;
+    line-height: 43px;
+    height: 43px;
+    cursor: pointer;
+}
+.MyMusic:hover
+{
+    background-color: rgba(230, 230, 230,0.5);
+}
+.MyMusiccontrol
+{
+    margin: 5px 5px 5px 0px; 
+    width: 35px;
+    height: 35px;
+    float: left;
+}
+
+
 
 /*то что слева*/
 
@@ -85,10 +174,11 @@ html, body
     display: block;
     background-color: #fff;
     box-sizing: border-box;
+    box-shadow: 0 5px 12px rgba(0,0,0,0.15), 0 3px 3px rgba(0,0,0,0.12);
 }
 .ProfileImg
 {
-    position: relative;
+    margin: 0 auto;
     display: block;
     width: 90%;
     height: auto;
@@ -96,8 +186,12 @@ html, body
 }
 .ProfileNastr
 {
-    padding: 2.5%;
-    height: 52px;
+    font-size: 110%;
+    line-height: 43px;
+    text-align: center;
+    padding: 1.7%;
+    /*padding-left: 5%; */
+    height: 43px;
     position: relative;
     display: block;
 }
@@ -108,16 +202,141 @@ html, body
 }
 .ProfileNastr img
 {
-    width: 53px;
+    padding-top: 5px; 
+    width: 33px;
     height: auto;
-    float: left;
+    float: right;
 }
 .ProfileNastr label
 {
+    margin-left: 33px;
     cursor: pointer;
-    margin-top: 3.8%;
-    margin-left: 8% ;
+}
+.VK
+{
+    font-size: 110%;
+    cursor: pointer;
+    text-align: center;
+    background-color: rgb(69, 102, 142);
+    color: #fff;
+    font-weight: 500;
+    line-height: 33px;
+    height: 43px;
+}
+.VK img
+{
+    width: 33px;
+    float: right;
+}
+.VK label
+{
+    cursor: pointer;
+    margin-left: 33px;
+}
+.LikeMusic
+{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    min-height: 37.38px;
+    max-height: 316.38px;
+    overflow: hidden;
+}
+.likedMusic:hover  .musicLable
+{
+    opacity: 0.1;
+}
+.likedMusic:hover .musicLablecontrol
+{
+    display: block;
+}
+.musicLable
+{
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    background-size: cover;
     float: left;
+    display: block;
+    margin-right: 4px; 
+    margin-top: 3px; 
+    width: 45px;
+    height: 45px;
+}
+.musicLablecontrol
+{
+    margin-left: 8px; 
+    margin-top: 10px;
+    z-index: 110;
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 7.5px;
+    background-size: cover;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: none;
+}
+.LikeMusic label
+{
+    cursor: pointer;
+    /*line-height: 25px;*/
+    width: 100%;
+}
+.LikeMusic hr
+{
+    margin: 2px;
+}
+.likedMusic
+{
+    box-sizing: border-box;
+    overflow-x:hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    line-height: 50.59px;
+    padding: 1.8px;
+    background-color: rgb(204, 204, 204);
+    margin-top: 5px;
+}
+.subscribers
+{
+    min-height: 37.38px;
+    max-height: 225.88px;
+}
+.subscribers hr
+{
+    margin: 2px;
+    margin-bottom: 5px;
+}
+.sub-cont
+{
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 22.75%;
+    justify-content: end;
+    max-height: 181.124px;
+}
+.sub
+{
+    width: 22.75%;
+    height: auto;
+    background-color: rgb(204, 204, 204);
+    margin-bottom: 25px;
+}
+.sub::before {
+	content: "";
+	display: block;
+	padding-top: 67.1%; /* С помощью этого padding мы задаем высоту равную ширине блока */
+}
+.sub:nth-child(4n+2)
+{
+    margin-right: 3%;
+    margin-left: 3%;
+}
+.sub:nth-child(4n+3)
+{
+    margin-right: 3%;
 }
 
 
