--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -18,50 +18,23 @@
 <body   id="body">
     {% csrf_token %}
     <div id="VueContainer">
-
-        <div  class="header-conteiner">
-        <div class="header" >
-            <div class="row">
-            <div class="name">
-                BoysBand
-            </div>
-            <div class="management">
-                    {% if username %}
-                    
-                    <div class="drop-menu row" @mouseenter="menuShow=!menuShow" @mouseleave="menuShow=!menuShow" >
-                        <span>{{ username }}</span>
-                        <img title="загрузить"  class="user" src="/static/mainapp/images/user.svg" alt="user">
-                        <ul class="menu-drop" v-if="menuShow">
-                            <li><a href="profile/">Профиль</a></li>
-                            <li><a href="auth/logout/">Выйти</a></li>
-                        </ul>
-                    </div>
-                  
-                    <img class="uploadButton" src="/static/mainapp/images/download.svg" alt="loader" @click='show'>
-                    <!--<a href="loader-music/">Добавить</a>-->
-                    <!--<a href="performers/">Моя музыка</a>-->
-                    
-                    {% else %}
-                    <a href="auth/login/">Авторизация</a>
-                    <a href="auth/register">Регистрация</a>
-                    {% endif %}
-            </div>
-        </div>
-        </div>
-        </div>
-        <div v-show="showModel" class="modal" id="myModal" >
-            <div class="modal-content" >
+        <header-container></header-container>
+        <div v-show="showLoader" class="modal" id="myModal" >
+            <div class="modal-content">
                 <loader></loader>
             </div>
         </div>
+        <profile-nastr @cencle-clicked="nastrShow = !nastrShow;" v-if='nastrShow'></profile-nastr>
+        <profile @nastr-clicked="nastrShow = !nastrShow;" v-if='!nastrShow && showProfile'></profile>
         <main-compilation></main-compilation>
         <top-player></top-player>
     </div>
     <div>
+        {% include "mainapp/ProfileNastr.html" %}
         {% include "mainapp/loader-music.html" %}
         {% include "mainapp/music-top.html" %}
         {% include "mainapp/playerTemplates.html" %}
     </div>
-
+    <script src="{% static 'mainapp/js/root.js' %}"></script>
 </body>
 </html>
