--- a/mainapp/static/mainapp/css/loader-music.css
+++ b/mainapp/static/mainapp/css/loader-music.css
@@ -128,7 +128,7 @@ textarea
 	z-index: 90;
 	width: 224px;
 	position: absolute;
-	top: 61.5px;
+	top: 62.5px;
 	padding: 0;
 	margin: 0;
 }
@@ -153,7 +153,8 @@ background-color: rgb(129, 129, 129);
 {
 	overflow-y: auto;
  	overflow-x: hidden !important;
-	height: 64px;
+	min-height: 30px;
+	max-height: 94px;
 	top: -1.3px;
 	position: absolute;
 	left: 224px;
@@ -249,7 +250,7 @@ background-color: rgb(129, 129, 129);
 	width: 40px;
 	height: 40px;
 }
-hr
+.HRloader
 {
 	position: relative;
 	top:47px;
