--- a/mainapp/static/mainapp/css/main.css
+++ b/mainapp/static/mainapp/css/main.css
@@ -90,12 +90,13 @@ html, body
 }
 .uploadButton
 {
+    margin-top: 7.5px;
     display: block;
     cursor: pointer;
     float: right;
     pointer-events: all;
-    height: 55px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
 }
 .drop-menu:hover
 {
