--- a/mainapp/templates/mainapp/music-top.html
+++ b/mainapp/templates/mainapp/music-top.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <script type="text/x-template" id="header-container">
-    <div  class="header-conteiner">
+    <div  class="header-conteiner" id="header-container">
             <div class="header" >
                 <div class="row">
                     <router-link to="/">
@@ -71,7 +71,7 @@
 
 <script type="text/x-template" id="compilation">
     <div id="compilation-top">
-    <div class="recommendations">
+    <div class="recommendations" id="recommendations">
             <div class="sortirovka">
                 <label class="sortirovka-name">Рекомендации</label>
                 <div class="sort">
@@ -89,7 +89,7 @@
                 {% endfor %}
             </div>
         </div>
-    <div class="compilation convert">
+    <div class="compilation convert" ref="list">
         <div class="music" v-for="(compilation, index) in compilations">
             <img class="cover" :src="compilation.image_alb" alt="обложка" @click="trackClick(index)">
             <img class="disk" src="{% static 'mainapp/images/disk2.png' %}" alt="disk">
@@ -102,7 +102,7 @@
 
 <script type="text/x-template" id="main">
     <div class="main">
-        <div class="topics">
+        <div class="topics" id="topics">
             <app-music-top></app-music-top>
             <compositor-top></compositor-top>
         </div>
